bk_ida/gccida/g1/fixup_var_refs_1
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fixup_var_refs_1/src/function.c:2396:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode promoted_mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fixup_var_refs_1/src/function.c:2425:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v32; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fixup_var_refs_1/src/function.c:2446:4: error: expected ';' after expression
rtx v53; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fixup_var_refs_1/src/function.c:2446:5: error: use of undeclared identifier 'v53'
rtx v53; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fixup_var_refs_1/src/function.c:2447:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v54; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fixup_var_refs_1/src/function.c:2460:4: error: expected ';' after expression
rtx v67; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fixup_var_refs_1/src/function.c:2460:5: error: use of undeclared identifier 'v67'
rtx v67; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fixup_var_refs_1/src/function.c:2466:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v73; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fixup_var_refs_1/src/function.c:2469:4: error: expected ';' after expression
rtx v76; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fixup_var_refs_1/src/function.c:2469:5: error: use of undeclared identifier 'v76'
rtx v76; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fixup_var_refs_1/src/function.c:2472:4: error: expected ';' after expression
rtx v79; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fixup_var_refs_1/src/function.c:2472:5: error: use of undeclared identifier 'v79'
rtx v79; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fixup_var_refs_1/src/function.c:2476:4: error: expected ';' after expression
rtx v83; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fixup_var_refs_1/src/function.c:2476:5: error: use of undeclared identifier 'v83'
rtx v83; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fixup_var_refs_1/src/function.c:2477:4: error: expected ';' after expression
rtx v84; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fixup_var_refs_1/src/function.c:2477:5: error: use of undeclared identifier 'v84'
rtx v84; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fixup_var_refs_1/src/function.c:2480:4: error: expected ';' after expression
rtx v87; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fixup_var_refs_1/src/function.c:2480:5: error: use of undeclared identifier 'v87'
rtx v87; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fixup_var_refs_1/src/function.c:2481:4: error: expected ';' after expression
rtx v88; // rdi 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fixup_var_refs_1/src/obj/function.o] Error 1
